--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
+@import url(./variable.css);
 @import url(./header.css);
-@import url(./media.css);
-@import url(./style.css);
+@import url(./find.css);
 @import url(./categories.css);
 @import url(./footer.css);
-@import url(./find.css);
+@import url(./media.css);
