--- a/src/css/find.css
+++ b/src/css/find.css
@@ -71,6 +71,12 @@
 
 .find_img {
     width: 90%;
-    margin: 50px auto 0;
-    
+    margin: 50px auto 0;   
+
+}
+
+.find_img img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
