--- a/src/css/media.css
+++ b/src/css/media.css
@@ -26,6 +26,12 @@
         display: none;
     }
 
+    .header_left-block {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
     .header_menu {
         position: static;
         width: auto;
@@ -35,10 +41,16 @@
         flex-direction: row;
         gap: 20px;
     }
-    .header .container {
+    /* .header .container {
         display: flex;
         align-items: center;
         justify-content: space-between;
+    } */
+
+    .header_sign_reg {
+        display: flex;
+        align-items: center;
+        gap: 35px;
     }
 
     .header_list {
@@ -53,6 +65,10 @@
     .container {
         max-width: 960px;
         font-size: 16px;
+    }
+
+    .find_content {
+        max-width: 460px;
     }
 
 }
