--- a/src/css/variable.css
+++ b/src/css/variable.css
@@ -36,7 +36,8 @@ body {
     box-shadow: 0px 4px 25px 0px rgba(15, 17, 56, 0.10);
     display: flex;
     justify-content: space-between;
-    padding: 12px 10px 12px 8px;
+    padding: 12px 10px 12px 25px;
+    margin-top: 50px;
 }
 
 .form>input {
@@ -61,6 +62,7 @@ body {
     line-height: 19px;
 
     color: #FFFFFF;
+    border: none;
 }
 
 .form>button span {
